AG-2316 - fixed issue where drag icon should be invisible rather than hidden when rowDrag = false.

--- a/packages/ag-grid-community/src/styles/ag-grid.scss
+++ b/packages/ag-grid-community/src/styles/ag-grid.scss
@@ -946,6 +946,10 @@ ag-grid, ag-grid-angular, ag-grid-ng2, ag-grid-polymer, ag-grid-aurelia  {
     display: none !important;
 }
 
+.ag-invisible {
+    visibility: hidden !important;
+}
+
 .ag-visibility-hidden {
     visibility: hidden !important;
 }
